--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
+    "jose": "^6.1.3",
     "next": "15.5.7",
     "pg": "^8.16.3",
     "react": "19.1.0",
